# summit

./: .bumpversion.cfg  .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .test_durations  CONTRIBUTING.md  Dockerfile  Dockerfile.in_silico  Dockerfile.main  LICENSE  README.md  README.rst  build.yml  get_version.py  makefile  panel.ipynb  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py
.TSEMO_DATA/: models.h5
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  test.yml
case_studies/asymmetric_hydrogenation/: surrogate_model_functions.py
case_studies/borrowing_hydrogen/: README.md  evolving_priors.ipynb  gp_optimizer.py  gpy_hyperparameter_optimization.ipynb  in_silico_lengthscales.npy  initial_design.ipynb  lhs_comparison.py  optimization_in_silico.ipynb  optimization_in_silico.py  optimization_template-Copy1.ipynb  optimization_template.ipynb  optimization_test.ipynb  run_optimization.py  safety_data.py  solvents_available.pickle  surrogate_model_exploration.ipynb  surrogate_model_functions.py
case_studies/formulation/: README.md  formulation_demo.ipynb
case_studies/in_silico_studies/: README.md  cas_numbers.pickle  requirements.txt  solvent_optimization.py  solvent_optimization_visualization.ipynb  surrogate_model_analysis.ipynb  surrogate_model_exploration.ipynb  surrogate_model_functions.py  yehia_thesis_solvent_selection_results.csv
case_studies/liwei_danilo/: data.xlsx  demo.ipynb  test_optimization.ipynb  web_interface.ipynb
case_studies/nanosilica/: README.md  nanosilica_demo.ipynb  silica_experiments_data.csv
case_studies/photoamination/: README.md  Update_18_July_2019.docx  initial_design.ipynb  initial_design_2.ipynb  initial_experiments.csv  solvent.ipynb  solvent_clustering.Rmd  solvent_clustering.ipynb
case_studies/web/: anvil.ipynb  data_1.xlsx  demo.ipynb  easy_problem.ipynb  test_optimization.ipynb  web.py  web_interface.ipynb
data/: README.md
data/amar/: solvent_descriptors.csv
data/baumgartner/: catalyst_Prices_2.csv  catalyst_prices.csv  catalyst_prices.xlsx  descriptors_ligands_bases.xls  ligands_bases.csv  ligands_bases.smi
data/descriptors/: bases.csv  ligands.csv  solubility_ligands_bases.xls
docs/: data.json  dtlz2_y_matlab.csv  dtlz2_y_python.csv  multiobjective.ipynb  neldermead.ipynb  runner.ipynb  snar_benchmark.ipynb  transforms.ipynb
docs/assets/: snar_experiments_external_0.csv  snar_experiments_external_1.csv  snar_experiments_external_2.csv  snar_tsemo_external.json  snar_tsemo_external_2.json  snobfit.json  snobfit_hartmann.json
docs/source/: Tutorial_MIT_kin.ipynb  conf.py  domains.rst  index.rst  installation.ipynb  installation.rst  new_benchmarks.ipynb  runner.rst  snar_benchmark.ipynb  strategies.rst  transforms.ipynb  transforms.rst  tutorial.ipynb  tutorial.rst  tutorial_test.ipynb  utils.rst
experiments/: README.md  visualize_ThreeHumpCamel.py
experiments/cbbo/: batch_spectral_sampling.ipynb  pymoo_milnp.ipynb  test_cbbo.ipynb  test_cbbo.py
experiments/cn_benchmark/: cn_benchmark_visualization.ipynb  cn_benchmark_visualization.py  cn_experiment.py  cn_experiment_MO.py  cn_experiment_SO.py  pareto_front.py  slurm_runner.py  slurm_summit_cn_experiment.sh  test_cn_experiment_MO.py  test_makeups.py  visualization.py
experiments/multiobjective/: multiobjective.ipynb
experiments/multitask/: mtbo_baumgartner.ipynb  mtbo_demo.ipynb  mtbo_kinetics.ipynb  mtbo_reizman.ipynb  multi_task_ax.ipynb  multitask.ipynb  multitask_paper_results.ipynb  multitask_st.py
experiments/pl-blitz/: test_pl.py
experiments/snar_benchmark/: animation.ipynb  pareto_front.ipynb  pareto_front.py  pareto_front_snar.csv  slurm_runner.py  slurm_summit_snar_experiment.sh  snar_experiment.py  snar_experiment_2.py  snar_experiment_base.py  snar_experiment_dro.py  snar_experiment_gryffin.py  snar_experiment_log.txt  snar_experiment_tsemo.py  snar_experiment_visualization.py  submit_sbatch  test.json  test_makeups.py  test_snar_experiment.py  visualization.ipynb
experiments/tsemo/: 2020-07-11_train_gp_matlab_data_boxplot_100_restarts_sampling.csv  2020-07-11_train_gp_matlab_data_boxplot_1_restarts_sampling.csv  2020-07-11_train_gp_matlab_data_pyrff_100_restarts_sampling.csv  20200710_train_gp_matlab_data_comparison_data_100_restarts.csv  20200710_train_gp_matlab_data_comparison_data_100_restarts_sampling.csv  20200710_train_gp_matlab_data_comparison_data_10_restarts.csv  20200710_train_gp_matlab_data_comparison_data_no_restarts.csv  3x3_lhs_matlab.csv  Untitled.ipynb  acc_time_res_study.npy  debug_tsemo.ipynb  dtlz2_test_run.m  dtlz_investigation.ipynb  faster_spectral_sampling.ipynb  gp_investigation.ipynb  machine.file.25293387  machine.file.25293389  matlab_python_comparison.ipynb  slurm-25293383.out  slurm-25293384.out  slurm-25293387.out  slurm-25293389.out  slurm-25293391.out  slurm_summit_tsemo.sh  spectral_sampling.ipynb  test_gp_optimizer.ipynb  train_gp_matlab_data.py  tsemo.py  tsemo_data.csv  tsemo_dtlz2_test.py  tsemo_params_0.json  tsemo_simple_test.ipynb
scripts/: train_emulators.py
scripts/train_emulators/: README.md  train_emulators.py
summit/: __init__.py  acquisition.py  domain.py  experiment.py  experiment_design.py  models.py  objective.py  objects.py  optimizers.py  run.py  solvent_select.py  strategies.py  utils.py
summit/benchmarks/: MIT_kin.py  MIT_kin_case1.py  MIT_kin_case2.py  MIT_kin_case3.py  MIT_kin_case4.py  MIT_kin_case5.py  __init__.py  base.py  experimental_emulator.py  multiobjective.py  pl_emulator.py  reizman_suzuki_emulator.py  snar.py  test.ipynb  test_emulator.py  test_functions.py  tester.py
summit/data/: __init__.py  data.py  dataset.py  solvent_descriptors.csv  ucb_pharma_approved_list.csv
summit/strategies/: base.py  (+16 more)
tests/: data_import.ipynb  dtlz2.xlsx  spectral_sampling.ipynb  test_Tools for optimizing chemical reactions.py  test_benchmarks.py  test_domain.ipynb  test_domain.py  test_experiment_design.py  test_gpyopt.ipynb  test_models.py  test_runner.json  test_runner.py  test_strategies.py  test_utils.py  tsemo_settings.json
(+3575 files in other folders)
