[tool.poetry]
name = "summit"
version = "0.6.0"
description = "Tools for optimizing chemical processes"
authors = ["Kobi Felton <kobi.c.f@gmail.com>", "Jan Rittig"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/sustainable-processes/summit"
homepage = "https://github.com/sustainable-processes/summit"
keywords = ["machine-learning", "chemistry", "reactions", "optimization", "neural-networks", "drug-discovery", "bayesian-optimization", "nelder-mead", "snobfit", "gryffin", "TSEMO"]

[tool.poetry.dependencies]
pandas = "^1.1.0"
python = "^3.7"
GPy = "^1.9"
numpy = "1.18.0"
pyrff = "^1.0.1"
SQSnobFit = "^0.4.3"
fastprogress = "^0.2.3"
ipywidgets = "^7.5.1"
matplotlib = "^3.2.2"
pymoo = "^0.4.1"
gpyopt = "^1.2.6"
neptune-client = {version= "^0.4.115", optional = true}
hiplot = {version= "^0.1.12", optional = true}
neptune-contrib = {extras = ["viz"], version = "^0.22.0", optional=true}
tensorflow = "^2.3.0"
torch = "^1.4.0"
paramiko = {version="^2.7.1", optional=true}    
gryffin = "^0.1.1"
sphinx = {version="^3.2.1", optional=true}
nbsphinx = {version="^0.7.1", optional=true}
sphinx-rtd-theme = {version="^0.5.0", optional=true}
pyrecorder = {version="^0.1.8", optional=true}
botorch = "^0.3.1"
streamlit = "^0.67.1"
ipykernel = "^5.3.4"
scikit-learn = "^0.23.2"
blitz-bayesian-pytorch = {git = "https://github.com/sustainable-processes/blitz-bayesian-deep-learning.git"}

[tool.poetry.extras]
experiments = ["neptune-client", "hiplot", "neptune-contrib", "paramiko", "pyrecorder"]
docs = ["sphinx", "nbsphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "^0.13.2"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"