[tool.poetry]
name = "summit"
version = "0.8.3"
description = "Tools for optimizing chemical processes"
authors = ["Kobi Felton <kobi.c.f@gmail.com>", "Jan Rittig"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/sustainable-processes/summit"
homepage = "https://github.com/sustainable-processes/summit"
keywords = ["machine-learning", "chemistry", "bayesian-reaction-optimization", "reaction-optimization", "neural-networks", "process optimization", "bayesian-optimization", "nelder-mead", "snobfit", "gryffin", "TSEMO"]

[tool.poetry.dependencies]
# Core dependencies
python = "^3.7"
pandas = "^1.1.0"
fastprogress = "^0.2.3"
matplotlib = "^3.2.2"
scikit-learn = "^0.24.1"
torch = "^1.4.0"
skorch = "^0.9.0"
cython = "^0.29.21"

# Dependencies for TSEMO and SOBO
GPy = "^1.9"
gpyopt = "^1.2.6"
numpy = "^1.18.0"
pyrff = "^2.0.1"
pymoo = "^0.4.1"

# Dependencies for Snobfit
SQSnobFit = "^0.4.3"

# Dependencies for MTBO
botorch = "^0.4.0"
gpytorch = "^1.3.0"

# Optional dependencies
xlrd = {version="^1.2.0", optional=true}
streamlit = {version="^0.67.1", optional=true}
neptune-client = {version= "^0.4.115", optional = true}
hiplot = {version= "^0.1.12", optional = true}
paramiko = {version="^2.7.1", optional=true}    
sphinx = {version="^3.2.1", optional=true}
nbsphinx = {version="^0.8.5", optional=true}
sphinx-rtd-theme = {version="^0.5.0", optional=true}
pyrecorder = {version="^0.1.8", optional=true}
entmoot = {version="^0.1.4", optional=true}
sphinx-reredirects = {version="^0.0.0", optional=true}

[tool.poetry.extras]
bnn = ["blitz-bayesian-pytorch"]
entmoot = ["entmoot"]
experiments = ["neptune-client", "hiplot", "paramiko", "pyrecorder", "xlrd", "streamlit"]
docs = ["sphinx", "nbsphinx", "sphinx-rtd-theme", "sphinx-reredirects"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipdb = "0.13.4"
rope = "^0.17.0"
black = {version = "^20.8b1", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"