[tool.poetry]
name = "summit"
version = "0.8.9"
description = "Tools for optimizing chemical processes"
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/sustainable-processes/summit"
homepage = "https://github.com/sustainable-processes/summit"
keywords = [
    "machine-learning",
    "chemistry",
    "bayesian-reaction-optimization",
    "reaction-optimization",
    "neural-networks",
    "process optimization",
    "bayesian-optimization",
    "nelder-mead",
    "snobfit",
    "gryffin",
    "TSEMO",
]

[tool.poetry.dependencies]
# Core dependencies
python = "^3.8, <3.11"
pandas = "^1.1.0"
scipy = ">=1.8.0"
numpy = "^1.21.0"
llvmlite = "^0.38.0"
numba = "^0.55.0"
fastprogress = "^0.2.3"
matplotlib = "^3.2.2"
scikit-learn = "^1.0"
torch = "^1.11.0"
skorch = "^0.11.0"
cython = "^0.29.21"

# Dependencies for TSEMO and SOBO
GPy = "^1.9"
gpyopt = "^1.2.6"
pyrff = "^2.0.1"
pymoo = "^0.6.0"

# Dependencies for Snobfit
SQSnobFit = "^0.4.3"

# Dependencies for MTBO
botorch = "^0.8.0"

# Tests
pytest = "^6.2.5"

# Optional dependencies
xlrd = { version = "^1.2.0", optional = true }
streamlit = { version = ">=0.67.1,<1.12.0", optional = true }
neptune-client = { version = "^0.4.115", optional = true }
hiplot = { version = "^0.1.12", optional = true }
paramiko = { version = "^2.7.1", optional = true }
sphinx = { version = "^3.2.1", optional = true }
jinja2 = { version = "<3.1.0", optional = true }
nbsphinx = { version = "^0.8.5", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }
pyrecorder = { version = "^0.1.8", optional = true }
entmoot = { version = "^0.1.4", optional = true }
sphinx-reredirects = { version = "^0.0.0", optional = true }

[tool.poetry.extras]
bnn = ["blitz-bayesian-pytorch"]
entmoot = ["entmoot"]
experiments = [
    "neptune-client",
    "hiplot",
    "paramiko",
    "pyrecorder",
    "xlrd",
    "streamlit",
]
docs = [
    "sphinx",
    "jinja2",
    "nbsphinx",
    "sphinx-rtd-theme",
    "sphinx-reredirects",
]

[tool.poetry.scripts]
summit-tests = 'summit:run_tests'

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.0"
ipdb = "0.13.4"
rope = "^0.17.0"
black = { version = "^20.8b1", allow-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
